# graph-rag

./: .gitignore  main.py  pyproject.toml
core/: clip.py  conf.py  cot.py  data.py  embedding.py  full.py  llm.py  metric.py  output.py  preprocess.py  prompt.py  qwen.py  rag.py  rag_graph_train.py  rag_graph_train_hetero.py  rag_train.py  train.py
core/display/: agg.py  important.py
core/emb/: emb.py  store.py
core/fast_dev/: fast_dev.py  fast_dev_gin.py  fast_dev_hetero.py
core/grag/: model.py
core/text_analysis/: text_analysis.py
fast_dev/: fast_dev.py
temp/: gnn.py  parquet.py
