[project]
name = "graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "accelerate>=1.8.1",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "loguru>=0.7.3",
    "networkx>=3.5",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "pillow>=11.2.1",
    "pyarrow>=20.0.0",
    "pymupdf>=1.26.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "transformers>=4.52.4",
]
